[package]
name = "osm-ways-slope"
version = "0.1.0"
edition = "2021"
authors = ["Matthieu Viry <matthieu.viry@cnrs.fr>"]
description = "Compute slope for OpenStreetMap ways using elevation data"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
gdal = "0.14.0"
osmpbfreader = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
